// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extend config should extend custom config 1`] = `
"Fablo is powered by :
 _____        __ _                         ___  ____ _ _ 
/  ___|      / _| |                        |  \\\\/  (_) | |
\\\\ \`--.  ___ | |_| |___      ____ _ _ __ ___| .  . |_| | |
 \`--. \\\\/ _ \\\\|  _| __\\\\ \\\\ /\\\\ / / _\` | '__/ _ \\\\ |\\\\/| | | | |
/\\\\__/ / (_) | | | |_ \\\\ V  V / (_| | | |  __/ |  | | | | |
\\\\____/ \\\\___/|_|  \\\\__| \\\\_/\\\\_/ \\\\__,_|_|  \\\\___\\\\_|  |_/_|_|_|
=========================================================== v: 0.3.0-unstable
Validation errors count: 0
Validation warnings count: 0
===========================================================
{
  \\"networkSettings\\": {
    \\"fabricVersion\\": \\"2.3.2\\",
    \\"tls\\": true,
    \\"monitoring\\": {
      \\"loglevel\\": \\"debug\\"
    },
    \\"fabricCaVersion\\": \\"1.5.0\\",
    \\"fabricCcenvVersion\\": \\"2.3.2\\",
    \\"fabricBaseosVersion\\": \\"2.3.2\\",
    \\"fabricJavaenvVersion\\": \\"2.3.0\\",
    \\"paths\\": {
      \\"fabloConfig\\": \\"<absolute path>\\",
      \\"chaincodesBaseDir\\": \\"<absolute path>\\"
    },
    \\"capabilities\\": {
      \\"channel\\": \\"V2_0\\",
      \\"orderer\\": \\"V2_0\\",
      \\"application\\": \\"V2_0\\",
      \\"isV2\\": true
    }
  },
  \\"ordererOrgHead\\": {
    \\"name\\": \\"Orderer1\\",
    \\"mspName\\": \\"Orderer1MSP\\",
    \\"domain\\": \\"orderer1.com\\",
    \\"profileName\\": \\"Orderer1Genesis\\",
    \\"genesisBlockName\\": \\"Orderer1Genesis.block\\",
    \\"ca\\": {
      \\"prefix\\": \\"ca\\",
      \\"address\\": \\"ca.orderer1.com\\",
      \\"port\\": 7054,
      \\"exposePort\\": 7020,
      \\"fullAddress\\": \\"ca.orderer1.com:7054\\",
      \\"caAdminNameVar\\": \\"ORDERER1_CA_ADMIN_NAME\\",
      \\"caAdminPassVar\\": \\"ORDERER1_CA_ADMIN_PASSWORD\\"
    },
    \\"consensus\\": \\"etcdraft\\",
    \\"orderers\\": [
      {
        \\"name\\": \\"orderer0\\",
        \\"domain\\": \\"orderer1.com\\",
        \\"address\\": \\"orderer0.orderer1.com\\",
        \\"consensus\\": \\"etcdraft\\",
        \\"port\\": 7021,
        \\"fullAddress\\": \\"orderer0.orderer1.com:7021\\"
      },
      {
        \\"name\\": \\"orderer1\\",
        \\"domain\\": \\"orderer1.com\\",
        \\"address\\": \\"orderer1.orderer1.com\\",
        \\"consensus\\": \\"etcdraft\\",
        \\"port\\": 7022,
        \\"fullAddress\\": \\"orderer1.orderer1.com:7022\\"
      },
      {
        \\"name\\": \\"orderer2\\",
        \\"domain\\": \\"orderer1.com\\",
        \\"address\\": \\"orderer2.orderer1.com\\",
        \\"consensus\\": \\"etcdraft\\",
        \\"port\\": 7023,
        \\"fullAddress\\": \\"orderer2.orderer1.com:7023\\"
      }
    ],
    \\"ordererHead\\": {
      \\"name\\": \\"orderer0\\",
      \\"domain\\": \\"orderer1.com\\",
      \\"address\\": \\"orderer0.orderer1.com\\",
      \\"consensus\\": \\"etcdraft\\",
      \\"port\\": 7021,
      \\"fullAddress\\": \\"orderer0.orderer1.com:7021\\"
    }
  },
  \\"ordererOrgs\\": [
    {
      \\"name\\": \\"Orderer1\\",
      \\"mspName\\": \\"Orderer1MSP\\",
      \\"domain\\": \\"orderer1.com\\",
      \\"profileName\\": \\"Orderer1Genesis\\",
      \\"genesisBlockName\\": \\"Orderer1Genesis.block\\",
      \\"ca\\": {
        \\"prefix\\": \\"ca\\",
        \\"address\\": \\"ca.orderer1.com\\",
        \\"port\\": 7054,
        \\"exposePort\\": 7020,
        \\"fullAddress\\": \\"ca.orderer1.com:7054\\",
        \\"caAdminNameVar\\": \\"ORDERER1_CA_ADMIN_NAME\\",
        \\"caAdminPassVar\\": \\"ORDERER1_CA_ADMIN_PASSWORD\\"
      },
      \\"consensus\\": \\"etcdraft\\",
      \\"orderers\\": [
        {
          \\"name\\": \\"orderer0\\",
          \\"domain\\": \\"orderer1.com\\",
          \\"address\\": \\"orderer0.orderer1.com\\",
          \\"consensus\\": \\"etcdraft\\",
          \\"port\\": 7021,
          \\"fullAddress\\": \\"orderer0.orderer1.com:7021\\"
        },
        {
          \\"name\\": \\"orderer1\\",
          \\"domain\\": \\"orderer1.com\\",
          \\"address\\": \\"orderer1.orderer1.com\\",
          \\"consensus\\": \\"etcdraft\\",
          \\"port\\": 7022,
          \\"fullAddress\\": \\"orderer1.orderer1.com:7022\\"
        },
        {
          \\"name\\": \\"orderer2\\",
          \\"domain\\": \\"orderer1.com\\",
          \\"address\\": \\"orderer2.orderer1.com\\",
          \\"consensus\\": \\"etcdraft\\",
          \\"port\\": 7023,
          \\"fullAddress\\": \\"orderer2.orderer1.com:7023\\"
        }
      ],
      \\"ordererHead\\": {
        \\"name\\": \\"orderer0\\",
        \\"domain\\": \\"orderer1.com\\",
        \\"address\\": \\"orderer0.orderer1.com\\",
        \\"consensus\\": \\"etcdraft\\",
        \\"port\\": 7021,
        \\"fullAddress\\": \\"orderer0.orderer1.com:7021\\"
      }
    },
    {
      \\"name\\": \\"Orderer2\\",
      \\"mspName\\": \\"Orderer2MSP\\",
      \\"domain\\": \\"orderer2.com\\",
      \\"profileName\\": \\"Orderer2Genesis\\",
      \\"genesisBlockName\\": \\"Orderer2Genesis.block\\",
      \\"ca\\": {
        \\"prefix\\": \\"ca\\",
        \\"address\\": \\"ca.orderer2.com\\",
        \\"port\\": 7054,
        \\"exposePort\\": 7030,
        \\"fullAddress\\": \\"ca.orderer2.com:7054\\",
        \\"caAdminNameVar\\": \\"ORDERER2_CA_ADMIN_NAME\\",
        \\"caAdminPassVar\\": \\"ORDERER2_CA_ADMIN_PASSWORD\\"
      },
      \\"consensus\\": \\"solo\\",
      \\"orderers\\": [
        {
          \\"name\\": \\"orderer0\\",
          \\"domain\\": \\"orderer2.com\\",
          \\"address\\": \\"orderer0.orderer2.com\\",
          \\"consensus\\": \\"solo\\",
          \\"port\\": 7031,
          \\"fullAddress\\": \\"orderer0.orderer2.com:7031\\"
        }
      ],
      \\"ordererHead\\": {
        \\"name\\": \\"orderer0\\",
        \\"domain\\": \\"orderer2.com\\",
        \\"address\\": \\"orderer0.orderer2.com\\",
        \\"consensus\\": \\"solo\\",
        \\"port\\": 7031,
        \\"fullAddress\\": \\"orderer0.orderer2.com:7031\\"
      }
    }
  ],
  \\"orgs\\": [
    {
      \\"name\\": \\"Org1\\",
      \\"mspName\\": \\"Org1MSP\\",
      \\"domain\\": \\"org1.com\\",
      \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
      \\"peersCount\\": 2,
      \\"peers\\": [
        {
          \\"name\\": \\"peer0\\",
          \\"address\\": \\"peer0.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7071,
          \\"fullAddress\\": \\"peer0.org1.com:7071\\",
          \\"couchDbExposePort\\": 5080
        },
        {
          \\"name\\": \\"peer1\\",
          \\"address\\": \\"peer1.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7072,
          \\"fullAddress\\": \\"peer1.org1.com:7072\\",
          \\"couchDbExposePort\\": 5081
        }
      ],
      \\"anchorPeers\\": [
        {
          \\"name\\": \\"peer0\\",
          \\"address\\": \\"peer0.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7071,
          \\"fullAddress\\": \\"peer0.org1.com:7071\\",
          \\"couchDbExposePort\\": 5080
        },
        {
          \\"name\\": \\"peer1\\",
          \\"address\\": \\"peer1.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7072,
          \\"fullAddress\\": \\"peer1.org1.com:7072\\",
          \\"couchDbExposePort\\": 5081
        }
      ],
      \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
      \\"ca\\": {
        \\"prefix\\": \\"ca\\",
        \\"address\\": \\"ca.org1.com\\",
        \\"port\\": 7054,
        \\"exposePort\\": 7070,
        \\"fullAddress\\": \\"ca.org1.com:7054\\",
        \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
        \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
      },
      \\"cli\\": {
        \\"address\\": \\"cli.org1.com\\"
      },
      \\"headPeer\\": {
        \\"name\\": \\"peer0\\",
        \\"address\\": \\"peer0.org1.com\\",
        \\"db\\": \\"LevelDb\\",
        \\"isAnchorPeer\\": true,
        \\"port\\": 7071,
        \\"fullAddress\\": \\"peer0.org1.com:7071\\",
        \\"couchDbExposePort\\": 5080
      },
      \\"tools\\": {
        \\"fabloRest\\": {
          \\"address\\": \\"fablo-rest.org1.com\\",
          \\"mspId\\": \\"Org1MSP\\",
          \\"port\\": 8800,
          \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
          \\"fabricCaName\\": \\"ca.org1.com\\",
          \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
          \\"discoverySslTargetNameOverrides\\": \\"\\",
          \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
          \\"logging\\": {
            \\"error\\": \\"console\\",
            \\"warn\\": \\"console\\",
            \\"info\\": \\"console\\",
            \\"debug\\": \\"console\\"
          }
        }
      }
    },
    {
      \\"name\\": \\"Org2\\",
      \\"mspName\\": \\"Org2MSP\\",
      \\"domain\\": \\"org2.com\\",
      \\"cryptoConfigFileName\\": \\"crypto-config-org2\\",
      \\"peersCount\\": 2,
      \\"peers\\": [
        {
          \\"name\\": \\"peer0\\",
          \\"address\\": \\"peer0.org2.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7081,
          \\"fullAddress\\": \\"peer0.org2.com:7081\\",
          \\"couchDbExposePort\\": 5090
        },
        {
          \\"name\\": \\"peer1\\",
          \\"address\\": \\"peer1.org2.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7082,
          \\"fullAddress\\": \\"peer1.org2.com:7082\\",
          \\"couchDbExposePort\\": 5091
        }
      ],
      \\"anchorPeers\\": [
        {
          \\"name\\": \\"peer0\\",
          \\"address\\": \\"peer0.org2.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7081,
          \\"fullAddress\\": \\"peer0.org2.com:7081\\",
          \\"couchDbExposePort\\": 5090
        },
        {
          \\"name\\": \\"peer1\\",
          \\"address\\": \\"peer1.org2.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7082,
          \\"fullAddress\\": \\"peer1.org2.com:7082\\",
          \\"couchDbExposePort\\": 5091
        }
      ],
      \\"bootstrapPeers\\": \\"\\\\\\"peer0.org2.com:7081 peer1.org2.com:7082\\\\\\"\\",
      \\"ca\\": {
        \\"prefix\\": \\"ca\\",
        \\"address\\": \\"ca.org2.com\\",
        \\"port\\": 7054,
        \\"exposePort\\": 7080,
        \\"fullAddress\\": \\"ca.org2.com:7054\\",
        \\"caAdminNameVar\\": \\"ORG2_CA_ADMIN_NAME\\",
        \\"caAdminPassVar\\": \\"ORG2_CA_ADMIN_PASSWORD\\"
      },
      \\"cli\\": {
        \\"address\\": \\"cli.org2.com\\"
      },
      \\"headPeer\\": {
        \\"name\\": \\"peer0\\",
        \\"address\\": \\"peer0.org2.com\\",
        \\"db\\": \\"LevelDb\\",
        \\"isAnchorPeer\\": true,
        \\"port\\": 7081,
        \\"fullAddress\\": \\"peer0.org2.com:7081\\",
        \\"couchDbExposePort\\": 5090
      },
      \\"tools\\": {}
    }
  ],
  \\"channels\\": [
    {
      \\"name\\": \\"my-channel1\\",
      \\"orgs\\": [
        {
          \\"name\\": \\"Org1\\",
          \\"mspName\\": \\"Org1MSP\\",
          \\"domain\\": \\"org1.com\\",
          \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
          \\"peersCount\\": 2,
          \\"peers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            }
          ],
          \\"anchorPeers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            }
          ],
          \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
          \\"ca\\": {
            \\"prefix\\": \\"ca\\",
            \\"address\\": \\"ca.org1.com\\",
            \\"port\\": 7054,
            \\"exposePort\\": 7070,
            \\"fullAddress\\": \\"ca.org1.com:7054\\",
            \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
            \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
          },
          \\"cli\\": {
            \\"address\\": \\"cli.org1.com\\"
          },
          \\"headPeer\\": {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          \\"tools\\": {
            \\"fabloRest\\": {
              \\"address\\": \\"fablo-rest.org1.com\\",
              \\"mspId\\": \\"Org1MSP\\",
              \\"port\\": 8800,
              \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
              \\"fabricCaName\\": \\"ca.org1.com\\",
              \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
              \\"discoverySslTargetNameOverrides\\": \\"\\",
              \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
              \\"logging\\": {
                \\"error\\": \\"console\\",
                \\"warn\\": \\"console\\",
                \\"info\\": \\"console\\",
                \\"debug\\": \\"console\\"
              }
            }
          }
        },
        {
          \\"name\\": \\"Org2\\",
          \\"mspName\\": \\"Org2MSP\\",
          \\"domain\\": \\"org2.com\\",
          \\"cryptoConfigFileName\\": \\"crypto-config-org2\\",
          \\"peersCount\\": 2,
          \\"peers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7081,
              \\"fullAddress\\": \\"peer0.org2.com:7081\\",
              \\"couchDbExposePort\\": 5090
            }
          ],
          \\"anchorPeers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7081,
              \\"fullAddress\\": \\"peer0.org2.com:7081\\",
              \\"couchDbExposePort\\": 5090
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7082,
              \\"fullAddress\\": \\"peer1.org2.com:7082\\",
              \\"couchDbExposePort\\": 5091
            }
          ],
          \\"bootstrapPeers\\": \\"\\\\\\"peer0.org2.com:7081 peer1.org2.com:7082\\\\\\"\\",
          \\"ca\\": {
            \\"prefix\\": \\"ca\\",
            \\"address\\": \\"ca.org2.com\\",
            \\"port\\": 7054,
            \\"exposePort\\": 7080,
            \\"fullAddress\\": \\"ca.org2.com:7054\\",
            \\"caAdminNameVar\\": \\"ORG2_CA_ADMIN_NAME\\",
            \\"caAdminPassVar\\": \\"ORG2_CA_ADMIN_PASSWORD\\"
          },
          \\"cli\\": {
            \\"address\\": \\"cli.org2.com\\"
          },
          \\"headPeer\\": {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org2.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7081,
            \\"fullAddress\\": \\"peer0.org2.com:7081\\",
            \\"couchDbExposePort\\": 5090
          },
          \\"tools\\": {}
        }
      ],
      \\"ordererHead\\": {
        \\"name\\": \\"orderer0\\",
        \\"domain\\": \\"orderer1.com\\",
        \\"address\\": \\"orderer0.orderer1.com\\",
        \\"consensus\\": \\"etcdraft\\",
        \\"port\\": 7021,
        \\"fullAddress\\": \\"orderer0.orderer1.com:7021\\"
      },
      \\"profileName\\": \\"MyChannel1\\",
      \\"instantiatingOrg\\": {
        \\"name\\": \\"Org1\\",
        \\"mspName\\": \\"Org1MSP\\",
        \\"domain\\": \\"org1.com\\",
        \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
        \\"peersCount\\": 2,
        \\"peers\\": [
          {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          }
        ],
        \\"anchorPeers\\": [
          {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          }
        ],
        \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
        \\"ca\\": {
          \\"prefix\\": \\"ca\\",
          \\"address\\": \\"ca.org1.com\\",
          \\"port\\": 7054,
          \\"exposePort\\": 7070,
          \\"fullAddress\\": \\"ca.org1.com:7054\\",
          \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
          \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
        },
        \\"cli\\": {
          \\"address\\": \\"cli.org1.com\\"
        },
        \\"headPeer\\": {
          \\"name\\": \\"peer0\\",
          \\"address\\": \\"peer0.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7071,
          \\"fullAddress\\": \\"peer0.org1.com:7071\\",
          \\"couchDbExposePort\\": 5080
        },
        \\"tools\\": {
          \\"fabloRest\\": {
            \\"address\\": \\"fablo-rest.org1.com\\",
            \\"mspId\\": \\"Org1MSP\\",
            \\"port\\": 8800,
            \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
            \\"fabricCaName\\": \\"ca.org1.com\\",
            \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
            \\"discoverySslTargetNameOverrides\\": \\"\\",
            \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
            \\"logging\\": {
              \\"error\\": \\"console\\",
              \\"warn\\": \\"console\\",
              \\"info\\": \\"console\\",
              \\"debug\\": \\"console\\"
            }
          }
        }
      }
    },
    {
      \\"name\\": \\"my-channel2\\",
      \\"orgs\\": [
        {
          \\"name\\": \\"Org1\\",
          \\"mspName\\": \\"Org1MSP\\",
          \\"domain\\": \\"org1.com\\",
          \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
          \\"peersCount\\": 2,
          \\"peers\\": [
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            }
          ],
          \\"anchorPeers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            }
          ],
          \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
          \\"ca\\": {
            \\"prefix\\": \\"ca\\",
            \\"address\\": \\"ca.org1.com\\",
            \\"port\\": 7054,
            \\"exposePort\\": 7070,
            \\"fullAddress\\": \\"ca.org1.com:7054\\",
            \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
            \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
          },
          \\"cli\\": {
            \\"address\\": \\"cli.org1.com\\"
          },
          \\"headPeer\\": {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          },
          \\"tools\\": {
            \\"fabloRest\\": {
              \\"address\\": \\"fablo-rest.org1.com\\",
              \\"mspId\\": \\"Org1MSP\\",
              \\"port\\": 8800,
              \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
              \\"fabricCaName\\": \\"ca.org1.com\\",
              \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
              \\"discoverySslTargetNameOverrides\\": \\"\\",
              \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
              \\"logging\\": {
                \\"error\\": \\"console\\",
                \\"warn\\": \\"console\\",
                \\"info\\": \\"console\\",
                \\"debug\\": \\"console\\"
              }
            }
          }
        },
        {
          \\"name\\": \\"Org2\\",
          \\"mspName\\": \\"Org2MSP\\",
          \\"domain\\": \\"org2.com\\",
          \\"cryptoConfigFileName\\": \\"crypto-config-org2\\",
          \\"peersCount\\": 2,
          \\"peers\\": [
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7082,
              \\"fullAddress\\": \\"peer1.org2.com:7082\\",
              \\"couchDbExposePort\\": 5091
            }
          ],
          \\"anchorPeers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7081,
              \\"fullAddress\\": \\"peer0.org2.com:7081\\",
              \\"couchDbExposePort\\": 5090
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7082,
              \\"fullAddress\\": \\"peer1.org2.com:7082\\",
              \\"couchDbExposePort\\": 5091
            }
          ],
          \\"bootstrapPeers\\": \\"\\\\\\"peer0.org2.com:7081 peer1.org2.com:7082\\\\\\"\\",
          \\"ca\\": {
            \\"prefix\\": \\"ca\\",
            \\"address\\": \\"ca.org2.com\\",
            \\"port\\": 7054,
            \\"exposePort\\": 7080,
            \\"fullAddress\\": \\"ca.org2.com:7054\\",
            \\"caAdminNameVar\\": \\"ORG2_CA_ADMIN_NAME\\",
            \\"caAdminPassVar\\": \\"ORG2_CA_ADMIN_PASSWORD\\"
          },
          \\"cli\\": {
            \\"address\\": \\"cli.org2.com\\"
          },
          \\"headPeer\\": {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org2.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7082,
            \\"fullAddress\\": \\"peer1.org2.com:7082\\",
            \\"couchDbExposePort\\": 5091
          },
          \\"tools\\": {}
        }
      ],
      \\"ordererHead\\": {
        \\"name\\": \\"orderer0\\",
        \\"domain\\": \\"orderer1.com\\",
        \\"address\\": \\"orderer0.orderer1.com\\",
        \\"consensus\\": \\"etcdraft\\",
        \\"port\\": 7021,
        \\"fullAddress\\": \\"orderer0.orderer1.com:7021\\"
      },
      \\"profileName\\": \\"MyChannel2\\",
      \\"instantiatingOrg\\": {
        \\"name\\": \\"Org1\\",
        \\"mspName\\": \\"Org1MSP\\",
        \\"domain\\": \\"org1.com\\",
        \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
        \\"peersCount\\": 2,
        \\"peers\\": [
          {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          }
        ],
        \\"anchorPeers\\": [
          {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          }
        ],
        \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
        \\"ca\\": {
          \\"prefix\\": \\"ca\\",
          \\"address\\": \\"ca.org1.com\\",
          \\"port\\": 7054,
          \\"exposePort\\": 7070,
          \\"fullAddress\\": \\"ca.org1.com:7054\\",
          \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
          \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
        },
        \\"cli\\": {
          \\"address\\": \\"cli.org1.com\\"
        },
        \\"headPeer\\": {
          \\"name\\": \\"peer1\\",
          \\"address\\": \\"peer1.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7072,
          \\"fullAddress\\": \\"peer1.org1.com:7072\\",
          \\"couchDbExposePort\\": 5081
        },
        \\"tools\\": {
          \\"fabloRest\\": {
            \\"address\\": \\"fablo-rest.org1.com\\",
            \\"mspId\\": \\"Org1MSP\\",
            \\"port\\": 8800,
            \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
            \\"fabricCaName\\": \\"ca.org1.com\\",
            \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
            \\"discoverySslTargetNameOverrides\\": \\"\\",
            \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
            \\"logging\\": {
              \\"error\\": \\"console\\",
              \\"warn\\": \\"console\\",
              \\"info\\": \\"console\\",
              \\"debug\\": \\"console\\"
            }
          }
        }
      }
    },
    {
      \\"name\\": \\"my-channel3\\",
      \\"orgs\\": [
        {
          \\"name\\": \\"Org1\\",
          \\"mspName\\": \\"Org1MSP\\",
          \\"domain\\": \\"org1.com\\",
          \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
          \\"peersCount\\": 2,
          \\"peers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            }
          ],
          \\"anchorPeers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            }
          ],
          \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
          \\"ca\\": {
            \\"prefix\\": \\"ca\\",
            \\"address\\": \\"ca.org1.com\\",
            \\"port\\": 7054,
            \\"exposePort\\": 7070,
            \\"fullAddress\\": \\"ca.org1.com:7054\\",
            \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
            \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
          },
          \\"cli\\": {
            \\"address\\": \\"cli.org1.com\\"
          },
          \\"headPeer\\": {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          \\"tools\\": {
            \\"fabloRest\\": {
              \\"address\\": \\"fablo-rest.org1.com\\",
              \\"mspId\\": \\"Org1MSP\\",
              \\"port\\": 8800,
              \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
              \\"fabricCaName\\": \\"ca.org1.com\\",
              \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
              \\"discoverySslTargetNameOverrides\\": \\"\\",
              \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
              \\"logging\\": {
                \\"error\\": \\"console\\",
                \\"warn\\": \\"console\\",
                \\"info\\": \\"console\\",
                \\"debug\\": \\"console\\"
              }
            }
          }
        },
        {
          \\"name\\": \\"Org2\\",
          \\"mspName\\": \\"Org2MSP\\",
          \\"domain\\": \\"org2.com\\",
          \\"cryptoConfigFileName\\": \\"crypto-config-org2\\",
          \\"peersCount\\": 2,
          \\"peers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7081,
              \\"fullAddress\\": \\"peer0.org2.com:7081\\",
              \\"couchDbExposePort\\": 5090
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7082,
              \\"fullAddress\\": \\"peer1.org2.com:7082\\",
              \\"couchDbExposePort\\": 5091
            }
          ],
          \\"anchorPeers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7081,
              \\"fullAddress\\": \\"peer0.org2.com:7081\\",
              \\"couchDbExposePort\\": 5090
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7082,
              \\"fullAddress\\": \\"peer1.org2.com:7082\\",
              \\"couchDbExposePort\\": 5091
            }
          ],
          \\"bootstrapPeers\\": \\"\\\\\\"peer0.org2.com:7081 peer1.org2.com:7082\\\\\\"\\",
          \\"ca\\": {
            \\"prefix\\": \\"ca\\",
            \\"address\\": \\"ca.org2.com\\",
            \\"port\\": 7054,
            \\"exposePort\\": 7080,
            \\"fullAddress\\": \\"ca.org2.com:7054\\",
            \\"caAdminNameVar\\": \\"ORG2_CA_ADMIN_NAME\\",
            \\"caAdminPassVar\\": \\"ORG2_CA_ADMIN_PASSWORD\\"
          },
          \\"cli\\": {
            \\"address\\": \\"cli.org2.com\\"
          },
          \\"headPeer\\": {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org2.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7081,
            \\"fullAddress\\": \\"peer0.org2.com:7081\\",
            \\"couchDbExposePort\\": 5090
          },
          \\"tools\\": {}
        }
      ],
      \\"ordererHead\\": {
        \\"name\\": \\"orderer0\\",
        \\"domain\\": \\"orderer2.com\\",
        \\"address\\": \\"orderer0.orderer2.com\\",
        \\"consensus\\": \\"solo\\",
        \\"port\\": 7031,
        \\"fullAddress\\": \\"orderer0.orderer2.com:7031\\"
      },
      \\"profileName\\": \\"MyChannel3\\",
      \\"instantiatingOrg\\": {
        \\"name\\": \\"Org1\\",
        \\"mspName\\": \\"Org1MSP\\",
        \\"domain\\": \\"org1.com\\",
        \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
        \\"peersCount\\": 2,
        \\"peers\\": [
          {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          }
        ],
        \\"anchorPeers\\": [
          {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          }
        ],
        \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
        \\"ca\\": {
          \\"prefix\\": \\"ca\\",
          \\"address\\": \\"ca.org1.com\\",
          \\"port\\": 7054,
          \\"exposePort\\": 7070,
          \\"fullAddress\\": \\"ca.org1.com:7054\\",
          \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
          \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
        },
        \\"cli\\": {
          \\"address\\": \\"cli.org1.com\\"
        },
        \\"headPeer\\": {
          \\"name\\": \\"peer0\\",
          \\"address\\": \\"peer0.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7071,
          \\"fullAddress\\": \\"peer0.org1.com:7071\\",
          \\"couchDbExposePort\\": 5080
        },
        \\"tools\\": {
          \\"fabloRest\\": {
            \\"address\\": \\"fablo-rest.org1.com\\",
            \\"mspId\\": \\"Org1MSP\\",
            \\"port\\": 8800,
            \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
            \\"fabricCaName\\": \\"ca.org1.com\\",
            \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
            \\"discoverySslTargetNameOverrides\\": \\"\\",
            \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
            \\"logging\\": {
              \\"error\\": \\"console\\",
              \\"warn\\": \\"console\\",
              \\"info\\": \\"console\\",
              \\"debug\\": \\"console\\"
            }
          }
        }
      }
    }
  ],
  \\"chaincodes\\": [
    {
      \\"directory\\": \\"./chaincodes/chaincode-kv-node\\",
      \\"name\\": \\"chaincode1\\",
      \\"version\\": \\"0.0.1\\",
      \\"lang\\": \\"node\\",
      \\"channel\\": {
        \\"name\\": \\"my-channel1\\",
        \\"orgs\\": [
          {
            \\"name\\": \\"Org1\\",
            \\"mspName\\": \\"Org1MSP\\",
            \\"domain\\": \\"org1.com\\",
            \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
            \\"peersCount\\": 2,
            \\"peers\\": [
              {
                \\"name\\": \\"peer0\\",
                \\"address\\": \\"peer0.org1.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7071,
                \\"fullAddress\\": \\"peer0.org1.com:7071\\",
                \\"couchDbExposePort\\": 5080
              }
            ],
            \\"anchorPeers\\": [
              {
                \\"name\\": \\"peer0\\",
                \\"address\\": \\"peer0.org1.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7071,
                \\"fullAddress\\": \\"peer0.org1.com:7071\\",
                \\"couchDbExposePort\\": 5080
              },
              {
                \\"name\\": \\"peer1\\",
                \\"address\\": \\"peer1.org1.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7072,
                \\"fullAddress\\": \\"peer1.org1.com:7072\\",
                \\"couchDbExposePort\\": 5081
              }
            ],
            \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
            \\"ca\\": {
              \\"prefix\\": \\"ca\\",
              \\"address\\": \\"ca.org1.com\\",
              \\"port\\": 7054,
              \\"exposePort\\": 7070,
              \\"fullAddress\\": \\"ca.org1.com:7054\\",
              \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
              \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
            },
            \\"cli\\": {
              \\"address\\": \\"cli.org1.com\\"
            },
            \\"headPeer\\": {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            },
            \\"tools\\": {
              \\"fabloRest\\": {
                \\"address\\": \\"fablo-rest.org1.com\\",
                \\"mspId\\": \\"Org1MSP\\",
                \\"port\\": 8800,
                \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
                \\"fabricCaName\\": \\"ca.org1.com\\",
                \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
                \\"discoverySslTargetNameOverrides\\": \\"\\",
                \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
                \\"logging\\": {
                  \\"error\\": \\"console\\",
                  \\"warn\\": \\"console\\",
                  \\"info\\": \\"console\\",
                  \\"debug\\": \\"console\\"
                }
              }
            }
          },
          {
            \\"name\\": \\"Org2\\",
            \\"mspName\\": \\"Org2MSP\\",
            \\"domain\\": \\"org2.com\\",
            \\"cryptoConfigFileName\\": \\"crypto-config-org2\\",
            \\"peersCount\\": 2,
            \\"peers\\": [
              {
                \\"name\\": \\"peer0\\",
                \\"address\\": \\"peer0.org2.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7081,
                \\"fullAddress\\": \\"peer0.org2.com:7081\\",
                \\"couchDbExposePort\\": 5090
              }
            ],
            \\"anchorPeers\\": [
              {
                \\"name\\": \\"peer0\\",
                \\"address\\": \\"peer0.org2.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7081,
                \\"fullAddress\\": \\"peer0.org2.com:7081\\",
                \\"couchDbExposePort\\": 5090
              },
              {
                \\"name\\": \\"peer1\\",
                \\"address\\": \\"peer1.org2.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7082,
                \\"fullAddress\\": \\"peer1.org2.com:7082\\",
                \\"couchDbExposePort\\": 5091
              }
            ],
            \\"bootstrapPeers\\": \\"\\\\\\"peer0.org2.com:7081 peer1.org2.com:7082\\\\\\"\\",
            \\"ca\\": {
              \\"prefix\\": \\"ca\\",
              \\"address\\": \\"ca.org2.com\\",
              \\"port\\": 7054,
              \\"exposePort\\": 7080,
              \\"fullAddress\\": \\"ca.org2.com:7054\\",
              \\"caAdminNameVar\\": \\"ORG2_CA_ADMIN_NAME\\",
              \\"caAdminPassVar\\": \\"ORG2_CA_ADMIN_PASSWORD\\"
            },
            \\"cli\\": {
              \\"address\\": \\"cli.org2.com\\"
            },
            \\"headPeer\\": {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7081,
              \\"fullAddress\\": \\"peer0.org2.com:7081\\",
              \\"couchDbExposePort\\": 5090
            },
            \\"tools\\": {}
          }
        ],
        \\"ordererHead\\": {
          \\"name\\": \\"orderer0\\",
          \\"domain\\": \\"orderer1.com\\",
          \\"address\\": \\"orderer0.orderer1.com\\",
          \\"consensus\\": \\"etcdraft\\",
          \\"port\\": 7021,
          \\"fullAddress\\": \\"orderer0.orderer1.com:7021\\"
        },
        \\"profileName\\": \\"MyChannel1\\",
        \\"instantiatingOrg\\": {
          \\"name\\": \\"Org1\\",
          \\"mspName\\": \\"Org1MSP\\",
          \\"domain\\": \\"org1.com\\",
          \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
          \\"peersCount\\": 2,
          \\"peers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            }
          ],
          \\"anchorPeers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            }
          ],
          \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
          \\"ca\\": {
            \\"prefix\\": \\"ca\\",
            \\"address\\": \\"ca.org1.com\\",
            \\"port\\": 7054,
            \\"exposePort\\": 7070,
            \\"fullAddress\\": \\"ca.org1.com:7054\\",
            \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
            \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
          },
          \\"cli\\": {
            \\"address\\": \\"cli.org1.com\\"
          },
          \\"headPeer\\": {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          \\"tools\\": {
            \\"fabloRest\\": {
              \\"address\\": \\"fablo-rest.org1.com\\",
              \\"mspId\\": \\"Org1MSP\\",
              \\"port\\": 8800,
              \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
              \\"fabricCaName\\": \\"ca.org1.com\\",
              \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
              \\"discoverySslTargetNameOverrides\\": \\"\\",
              \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
              \\"logging\\": {
                \\"error\\": \\"console\\",
                \\"warn\\": \\"console\\",
                \\"info\\": \\"console\\",
                \\"debug\\": \\"console\\"
              }
            }
          }
        }
      },
      \\"initRequired\\": false,
      \\"endorsement\\": \\"OR ('Org1MSP.member', 'Org2MSP.member')\\",
      \\"instantiatingOrg\\": {
        \\"name\\": \\"Org1\\",
        \\"mspName\\": \\"Org1MSP\\",
        \\"domain\\": \\"org1.com\\",
        \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
        \\"peersCount\\": 2,
        \\"peers\\": [
          {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          }
        ],
        \\"anchorPeers\\": [
          {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          }
        ],
        \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
        \\"ca\\": {
          \\"prefix\\": \\"ca\\",
          \\"address\\": \\"ca.org1.com\\",
          \\"port\\": 7054,
          \\"exposePort\\": 7070,
          \\"fullAddress\\": \\"ca.org1.com:7054\\",
          \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
          \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
        },
        \\"cli\\": {
          \\"address\\": \\"cli.org1.com\\"
        },
        \\"headPeer\\": {
          \\"name\\": \\"peer0\\",
          \\"address\\": \\"peer0.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7071,
          \\"fullAddress\\": \\"peer0.org1.com:7071\\",
          \\"couchDbExposePort\\": 5080
        },
        \\"tools\\": {
          \\"fabloRest\\": {
            \\"address\\": \\"fablo-rest.org1.com\\",
            \\"mspId\\": \\"Org1MSP\\",
            \\"port\\": 8800,
            \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
            \\"fabricCaName\\": \\"ca.org1.com\\",
            \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
            \\"discoverySslTargetNameOverrides\\": \\"\\",
            \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
            \\"logging\\": {
              \\"error\\": \\"console\\",
              \\"warn\\": \\"console\\",
              \\"info\\": \\"console\\",
              \\"debug\\": \\"console\\"
            }
          }
        }
      },
      \\"privateData\\": []
    },
    {
      \\"directory\\": \\"./chaincodes/chaincode-java-simple\\",
      \\"name\\": \\"chaincode2\\",
      \\"version\\": \\"0.0.1\\",
      \\"lang\\": \\"java\\",
      \\"channel\\": {
        \\"name\\": \\"my-channel2\\",
        \\"orgs\\": [
          {
            \\"name\\": \\"Org1\\",
            \\"mspName\\": \\"Org1MSP\\",
            \\"domain\\": \\"org1.com\\",
            \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
            \\"peersCount\\": 2,
            \\"peers\\": [
              {
                \\"name\\": \\"peer1\\",
                \\"address\\": \\"peer1.org1.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7072,
                \\"fullAddress\\": \\"peer1.org1.com:7072\\",
                \\"couchDbExposePort\\": 5081
              }
            ],
            \\"anchorPeers\\": [
              {
                \\"name\\": \\"peer0\\",
                \\"address\\": \\"peer0.org1.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7071,
                \\"fullAddress\\": \\"peer0.org1.com:7071\\",
                \\"couchDbExposePort\\": 5080
              },
              {
                \\"name\\": \\"peer1\\",
                \\"address\\": \\"peer1.org1.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7072,
                \\"fullAddress\\": \\"peer1.org1.com:7072\\",
                \\"couchDbExposePort\\": 5081
              }
            ],
            \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
            \\"ca\\": {
              \\"prefix\\": \\"ca\\",
              \\"address\\": \\"ca.org1.com\\",
              \\"port\\": 7054,
              \\"exposePort\\": 7070,
              \\"fullAddress\\": \\"ca.org1.com:7054\\",
              \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
              \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
            },
            \\"cli\\": {
              \\"address\\": \\"cli.org1.com\\"
            },
            \\"headPeer\\": {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            },
            \\"tools\\": {
              \\"fabloRest\\": {
                \\"address\\": \\"fablo-rest.org1.com\\",
                \\"mspId\\": \\"Org1MSP\\",
                \\"port\\": 8800,
                \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
                \\"fabricCaName\\": \\"ca.org1.com\\",
                \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
                \\"discoverySslTargetNameOverrides\\": \\"\\",
                \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
                \\"logging\\": {
                  \\"error\\": \\"console\\",
                  \\"warn\\": \\"console\\",
                  \\"info\\": \\"console\\",
                  \\"debug\\": \\"console\\"
                }
              }
            }
          },
          {
            \\"name\\": \\"Org2\\",
            \\"mspName\\": \\"Org2MSP\\",
            \\"domain\\": \\"org2.com\\",
            \\"cryptoConfigFileName\\": \\"crypto-config-org2\\",
            \\"peersCount\\": 2,
            \\"peers\\": [
              {
                \\"name\\": \\"peer1\\",
                \\"address\\": \\"peer1.org2.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7082,
                \\"fullAddress\\": \\"peer1.org2.com:7082\\",
                \\"couchDbExposePort\\": 5091
              }
            ],
            \\"anchorPeers\\": [
              {
                \\"name\\": \\"peer0\\",
                \\"address\\": \\"peer0.org2.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7081,
                \\"fullAddress\\": \\"peer0.org2.com:7081\\",
                \\"couchDbExposePort\\": 5090
              },
              {
                \\"name\\": \\"peer1\\",
                \\"address\\": \\"peer1.org2.com\\",
                \\"db\\": \\"LevelDb\\",
                \\"isAnchorPeer\\": true,
                \\"port\\": 7082,
                \\"fullAddress\\": \\"peer1.org2.com:7082\\",
                \\"couchDbExposePort\\": 5091
              }
            ],
            \\"bootstrapPeers\\": \\"\\\\\\"peer0.org2.com:7081 peer1.org2.com:7082\\\\\\"\\",
            \\"ca\\": {
              \\"prefix\\": \\"ca\\",
              \\"address\\": \\"ca.org2.com\\",
              \\"port\\": 7054,
              \\"exposePort\\": 7080,
              \\"fullAddress\\": \\"ca.org2.com:7054\\",
              \\"caAdminNameVar\\": \\"ORG2_CA_ADMIN_NAME\\",
              \\"caAdminPassVar\\": \\"ORG2_CA_ADMIN_PASSWORD\\"
            },
            \\"cli\\": {
              \\"address\\": \\"cli.org2.com\\"
            },
            \\"headPeer\\": {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org2.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7082,
              \\"fullAddress\\": \\"peer1.org2.com:7082\\",
              \\"couchDbExposePort\\": 5091
            },
            \\"tools\\": {}
          }
        ],
        \\"ordererHead\\": {
          \\"name\\": \\"orderer0\\",
          \\"domain\\": \\"orderer1.com\\",
          \\"address\\": \\"orderer0.orderer1.com\\",
          \\"consensus\\": \\"etcdraft\\",
          \\"port\\": 7021,
          \\"fullAddress\\": \\"orderer0.orderer1.com:7021\\"
        },
        \\"profileName\\": \\"MyChannel2\\",
        \\"instantiatingOrg\\": {
          \\"name\\": \\"Org1\\",
          \\"mspName\\": \\"Org1MSP\\",
          \\"domain\\": \\"org1.com\\",
          \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
          \\"peersCount\\": 2,
          \\"peers\\": [
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            }
          ],
          \\"anchorPeers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            }
          ],
          \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
          \\"ca\\": {
            \\"prefix\\": \\"ca\\",
            \\"address\\": \\"ca.org1.com\\",
            \\"port\\": 7054,
            \\"exposePort\\": 7070,
            \\"fullAddress\\": \\"ca.org1.com:7054\\",
            \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
            \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
          },
          \\"cli\\": {
            \\"address\\": \\"cli.org1.com\\"
          },
          \\"headPeer\\": {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          },
          \\"tools\\": {
            \\"fabloRest\\": {
              \\"address\\": \\"fablo-rest.org1.com\\",
              \\"mspId\\": \\"Org1MSP\\",
              \\"port\\": 8800,
              \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
              \\"fabricCaName\\": \\"ca.org1.com\\",
              \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
              \\"discoverySslTargetNameOverrides\\": \\"\\",
              \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
              \\"logging\\": {
                \\"error\\": \\"console\\",
                \\"warn\\": \\"console\\",
                \\"info\\": \\"console\\",
                \\"debug\\": \\"console\\"
              }
            }
          }
        }
      },
      \\"initRequired\\": false,
      \\"endorsement\\": \\"OR ('Org1MSP.member', 'Org2MSP.member')\\",
      \\"instantiatingOrg\\": {
        \\"name\\": \\"Org1\\",
        \\"mspName\\": \\"Org1MSP\\",
        \\"domain\\": \\"org1.com\\",
        \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
        \\"peersCount\\": 2,
        \\"peers\\": [
          {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          }
        ],
        \\"anchorPeers\\": [
          {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          }
        ],
        \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
        \\"ca\\": {
          \\"prefix\\": \\"ca\\",
          \\"address\\": \\"ca.org1.com\\",
          \\"port\\": 7054,
          \\"exposePort\\": 7070,
          \\"fullAddress\\": \\"ca.org1.com:7054\\",
          \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
          \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
        },
        \\"cli\\": {
          \\"address\\": \\"cli.org1.com\\"
        },
        \\"headPeer\\": {
          \\"name\\": \\"peer1\\",
          \\"address\\": \\"peer1.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7072,
          \\"fullAddress\\": \\"peer1.org1.com:7072\\",
          \\"couchDbExposePort\\": 5081
        },
        \\"tools\\": {
          \\"fabloRest\\": {
            \\"address\\": \\"fablo-rest.org1.com\\",
            \\"mspId\\": \\"Org1MSP\\",
            \\"port\\": 8800,
            \\"fabricCaUrl\\": \\"http://ca.org1.com:7054\\",
            \\"fabricCaName\\": \\"ca.org1.com\\",
            \\"discoveryUrls\\": \\"grpcs://peer0.org1.com:7071,grpcs://peer1.org1.com:7072,grpcs://peer0.org2.com:7081,grpcs://peer1.org2.com:7082\\",
            \\"discoverySslTargetNameOverrides\\": \\"\\",
            \\"discoveryTlsCaCertFiles\\": \\"/crypto/org1.com/peers/peer0.org1.com/tls/ca.crt,/crypto/org1.com/peers/peer1.org1.com/tls/ca.crt,/crypto/org2.com/peers/peer0.org2.com/tls/ca.crt,/crypto/org2.com/peers/peer1.org2.com/tls/ca.crt\\",
            \\"logging\\": {
              \\"error\\": \\"console\\",
              \\"warn\\": \\"console\\",
              \\"info\\": \\"console\\",
              \\"debug\\": \\"console\\"
            }
          }
        }
      },
      \\"privateData\\": []
    }
  ]
}
"
`;

exports[`extend config should extend default config 1`] = `
"Fablo is powered by :
 _____        __ _                         ___  ____ _ _ 
/  ___|      / _| |                        |  \\\\/  (_) | |
\\\\ \`--.  ___ | |_| |___      ____ _ _ __ ___| .  . |_| | |
 \`--. \\\\/ _ \\\\|  _| __\\\\ \\\\ /\\\\ / / _\` | '__/ _ \\\\ |\\\\/| | | | |
/\\\\__/ / (_) | | | |_ \\\\ V  V / (_| | | |  __/ |  | | | | |
\\\\____/ \\\\___/|_|  \\\\__| \\\\_/\\\\_/ \\\\__,_|_|  \\\\___\\\\_|  |_/_|_|_|
=========================================================== v: 0.3.0-unstable
Validation errors count: 0
Validation warnings count: 0
===========================================================
{
  \\"networkSettings\\": {
    \\"fabricVersion\\": \\"2.3.2\\",
    \\"tls\\": false,
    \\"fabricCaVersion\\": \\"1.5.0\\",
    \\"fabricCcenvVersion\\": \\"2.3.2\\",
    \\"fabricBaseosVersion\\": \\"2.3.2\\",
    \\"fabricJavaenvVersion\\": \\"2.3.0\\",
    \\"paths\\": {
      \\"fabloConfig\\": \\"<absolute path>\\",
      \\"chaincodesBaseDir\\": \\"<absolute path>\\"
    },
    \\"monitoring\\": {
      \\"loglevel\\": \\"info\\"
    },
    \\"capabilities\\": {
      \\"channel\\": \\"V2_0\\",
      \\"orderer\\": \\"V2_0\\",
      \\"application\\": \\"V2_0\\",
      \\"isV2\\": true
    }
  },
  \\"ordererOrgHead\\": {
    \\"name\\": \\"Orderer\\",
    \\"mspName\\": \\"OrdererMSP\\",
    \\"domain\\": \\"orderer.com\\",
    \\"profileName\\": \\"OrdererGenesis\\",
    \\"genesisBlockName\\": \\"OrdererGenesis.block\\",
    \\"ca\\": {
      \\"prefix\\": \\"ca\\",
      \\"address\\": \\"ca.orderer.com\\",
      \\"port\\": 7054,
      \\"exposePort\\": 7020,
      \\"fullAddress\\": \\"ca.orderer.com:7054\\",
      \\"caAdminNameVar\\": \\"ORDERER_CA_ADMIN_NAME\\",
      \\"caAdminPassVar\\": \\"ORDERER_CA_ADMIN_PASSWORD\\"
    },
    \\"consensus\\": \\"solo\\",
    \\"orderers\\": [
      {
        \\"name\\": \\"orderer0\\",
        \\"domain\\": \\"orderer.com\\",
        \\"address\\": \\"orderer0.orderer.com\\",
        \\"consensus\\": \\"solo\\",
        \\"port\\": 7021,
        \\"fullAddress\\": \\"orderer0.orderer.com:7021\\"
      }
    ],
    \\"ordererHead\\": {
      \\"name\\": \\"orderer0\\",
      \\"domain\\": \\"orderer.com\\",
      \\"address\\": \\"orderer0.orderer.com\\",
      \\"consensus\\": \\"solo\\",
      \\"port\\": 7021,
      \\"fullAddress\\": \\"orderer0.orderer.com:7021\\"
    }
  },
  \\"ordererOrgs\\": [
    {
      \\"name\\": \\"Orderer\\",
      \\"mspName\\": \\"OrdererMSP\\",
      \\"domain\\": \\"orderer.com\\",
      \\"profileName\\": \\"OrdererGenesis\\",
      \\"genesisBlockName\\": \\"OrdererGenesis.block\\",
      \\"ca\\": {
        \\"prefix\\": \\"ca\\",
        \\"address\\": \\"ca.orderer.com\\",
        \\"port\\": 7054,
        \\"exposePort\\": 7020,
        \\"fullAddress\\": \\"ca.orderer.com:7054\\",
        \\"caAdminNameVar\\": \\"ORDERER_CA_ADMIN_NAME\\",
        \\"caAdminPassVar\\": \\"ORDERER_CA_ADMIN_PASSWORD\\"
      },
      \\"consensus\\": \\"solo\\",
      \\"orderers\\": [
        {
          \\"name\\": \\"orderer0\\",
          \\"domain\\": \\"orderer.com\\",
          \\"address\\": \\"orderer0.orderer.com\\",
          \\"consensus\\": \\"solo\\",
          \\"port\\": 7021,
          \\"fullAddress\\": \\"orderer0.orderer.com:7021\\"
        }
      ],
      \\"ordererHead\\": {
        \\"name\\": \\"orderer0\\",
        \\"domain\\": \\"orderer.com\\",
        \\"address\\": \\"orderer0.orderer.com\\",
        \\"consensus\\": \\"solo\\",
        \\"port\\": 7021,
        \\"fullAddress\\": \\"orderer0.orderer.com:7021\\"
      }
    }
  ],
  \\"orgs\\": [
    {
      \\"name\\": \\"Org1\\",
      \\"mspName\\": \\"Org1MSP\\",
      \\"domain\\": \\"org1.com\\",
      \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
      \\"peersCount\\": 2,
      \\"peers\\": [
        {
          \\"name\\": \\"peer0\\",
          \\"address\\": \\"peer0.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7071,
          \\"fullAddress\\": \\"peer0.org1.com:7071\\",
          \\"couchDbExposePort\\": 5080
        },
        {
          \\"name\\": \\"peer1\\",
          \\"address\\": \\"peer1.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7072,
          \\"fullAddress\\": \\"peer1.org1.com:7072\\",
          \\"couchDbExposePort\\": 5081
        }
      ],
      \\"anchorPeers\\": [
        {
          \\"name\\": \\"peer0\\",
          \\"address\\": \\"peer0.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7071,
          \\"fullAddress\\": \\"peer0.org1.com:7071\\",
          \\"couchDbExposePort\\": 5080
        },
        {
          \\"name\\": \\"peer1\\",
          \\"address\\": \\"peer1.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7072,
          \\"fullAddress\\": \\"peer1.org1.com:7072\\",
          \\"couchDbExposePort\\": 5081
        }
      ],
      \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
      \\"ca\\": {
        \\"prefix\\": \\"ca\\",
        \\"address\\": \\"ca.org1.com\\",
        \\"port\\": 7054,
        \\"exposePort\\": 7070,
        \\"fullAddress\\": \\"ca.org1.com:7054\\",
        \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
        \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
      },
      \\"cli\\": {
        \\"address\\": \\"cli.org1.com\\"
      },
      \\"headPeer\\": {
        \\"name\\": \\"peer0\\",
        \\"address\\": \\"peer0.org1.com\\",
        \\"db\\": \\"LevelDb\\",
        \\"isAnchorPeer\\": true,
        \\"port\\": 7071,
        \\"fullAddress\\": \\"peer0.org1.com:7071\\",
        \\"couchDbExposePort\\": 5080
      },
      \\"tools\\": {}
    }
  ],
  \\"channels\\": [
    {
      \\"name\\": \\"my-channel1\\",
      \\"orgs\\": [
        {
          \\"name\\": \\"Org1\\",
          \\"mspName\\": \\"Org1MSP\\",
          \\"domain\\": \\"org1.com\\",
          \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
          \\"peersCount\\": 2,
          \\"peers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            }
          ],
          \\"anchorPeers\\": [
            {
              \\"name\\": \\"peer0\\",
              \\"address\\": \\"peer0.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7071,
              \\"fullAddress\\": \\"peer0.org1.com:7071\\",
              \\"couchDbExposePort\\": 5080
            },
            {
              \\"name\\": \\"peer1\\",
              \\"address\\": \\"peer1.org1.com\\",
              \\"db\\": \\"LevelDb\\",
              \\"isAnchorPeer\\": true,
              \\"port\\": 7072,
              \\"fullAddress\\": \\"peer1.org1.com:7072\\",
              \\"couchDbExposePort\\": 5081
            }
          ],
          \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
          \\"ca\\": {
            \\"prefix\\": \\"ca\\",
            \\"address\\": \\"ca.org1.com\\",
            \\"port\\": 7054,
            \\"exposePort\\": 7070,
            \\"fullAddress\\": \\"ca.org1.com:7054\\",
            \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
            \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
          },
          \\"cli\\": {
            \\"address\\": \\"cli.org1.com\\"
          },
          \\"headPeer\\": {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          \\"tools\\": {}
        }
      ],
      \\"ordererHead\\": {
        \\"name\\": \\"orderer0\\",
        \\"domain\\": \\"orderer.com\\",
        \\"address\\": \\"orderer0.orderer.com\\",
        \\"consensus\\": \\"solo\\",
        \\"port\\": 7021,
        \\"fullAddress\\": \\"orderer0.orderer.com:7021\\"
      },
      \\"profileName\\": \\"MyChannel1\\",
      \\"instantiatingOrg\\": {
        \\"name\\": \\"Org1\\",
        \\"mspName\\": \\"Org1MSP\\",
        \\"domain\\": \\"org1.com\\",
        \\"cryptoConfigFileName\\": \\"crypto-config-org1\\",
        \\"peersCount\\": 2,
        \\"peers\\": [
          {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          }
        ],
        \\"anchorPeers\\": [
          {
            \\"name\\": \\"peer0\\",
            \\"address\\": \\"peer0.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7071,
            \\"fullAddress\\": \\"peer0.org1.com:7071\\",
            \\"couchDbExposePort\\": 5080
          },
          {
            \\"name\\": \\"peer1\\",
            \\"address\\": \\"peer1.org1.com\\",
            \\"db\\": \\"LevelDb\\",
            \\"isAnchorPeer\\": true,
            \\"port\\": 7072,
            \\"fullAddress\\": \\"peer1.org1.com:7072\\",
            \\"couchDbExposePort\\": 5081
          }
        ],
        \\"bootstrapPeers\\": \\"\\\\\\"peer0.org1.com:7071 peer1.org1.com:7072\\\\\\"\\",
        \\"ca\\": {
          \\"prefix\\": \\"ca\\",
          \\"address\\": \\"ca.org1.com\\",
          \\"port\\": 7054,
          \\"exposePort\\": 7070,
          \\"fullAddress\\": \\"ca.org1.com:7054\\",
          \\"caAdminNameVar\\": \\"ORG1_CA_ADMIN_NAME\\",
          \\"caAdminPassVar\\": \\"ORG1_CA_ADMIN_PASSWORD\\"
        },
        \\"cli\\": {
          \\"address\\": \\"cli.org1.com\\"
        },
        \\"headPeer\\": {
          \\"name\\": \\"peer0\\",
          \\"address\\": \\"peer0.org1.com\\",
          \\"db\\": \\"LevelDb\\",
          \\"isAnchorPeer\\": true,
          \\"port\\": 7071,
          \\"fullAddress\\": \\"peer0.org1.com:7071\\",
          \\"couchDbExposePort\\": 5080
        },
        \\"tools\\": {}
      }
    }
  ],
  \\"chaincodes\\": []
}
"
`;

exports[`init should init simple fablo config 1`] = `
"{
  \\"$schema\\": \\"https://github.com/softwaremill/fablo/releases/download/0.3.0-unstable/schema.json\\",
  \\"networkSettings\\": {
    \\"fabricVersion\\": \\"2.3.2\\",
    \\"tls\\": false
  },
  \\"ordererOrgs\\": [
    {
      \\"organization\\": {
        \\"name\\": \\"Orderer\\",
        \\"domain\\": \\"orderer.com\\"
      },
      \\"orderer\\": {
        \\"groupName\\": \\"group1\\",
        \\"type\\": \\"solo\\",
        \\"instances\\": 1
      }
    }
  ],
  \\"orgs\\": [
    {
      \\"organization\\": {
        \\"name\\": \\"Org1\\",
        \\"domain\\": \\"org1.com\\"
      },
      \\"peer\\": {
        \\"instances\\": 2,
        \\"db\\": \\"LevelDb\\"
      },
      \\"tools\\": {}
    }
  ],
  \\"channels\\": [
    {
      \\"name\\": \\"my-channel1\\",
      \\"orgs\\": [
        {
          \\"name\\": \\"Org1\\",
          \\"peers\\": [
            \\"peer0\\",
            \\"peer1\\"
          ]
        }
      ]
    }
  ],
  \\"chaincodes\\": []
}"
`;

exports[`init should init simple fablo config with node chaincode 1`] = `
"{
  \\"$schema\\": \\"https://github.com/softwaremill/fablo/releases/download/0.3.0-unstable/schema.json\\",
  \\"networkSettings\\": {
    \\"fabricVersion\\": \\"2.3.2\\",
    \\"tls\\": false
  },
  \\"ordererOrgs\\": [
    {
      \\"organization\\": {
        \\"name\\": \\"Orderer\\",
        \\"domain\\": \\"orderer.com\\"
      },
      \\"orderer\\": {
        \\"groupName\\": \\"group1\\",
        \\"type\\": \\"solo\\",
        \\"instances\\": 1
      }
    }
  ],
  \\"orgs\\": [
    {
      \\"organization\\": {
        \\"name\\": \\"Org1\\",
        \\"domain\\": \\"org1.com\\"
      },
      \\"peer\\": {
        \\"instances\\": 2,
        \\"db\\": \\"LevelDb\\"
      },
      \\"tools\\": {}
    }
  ],
  \\"channels\\": [
    {
      \\"name\\": \\"my-channel1\\",
      \\"orgs\\": [
        {
          \\"name\\": \\"Org1\\",
          \\"peers\\": [
            \\"peer0\\",
            \\"peer1\\"
          ]
        }
      ]
    }
  ],
  \\"chaincodes\\": [
    {
      \\"name\\": \\"chaincode1\\",
      \\"version\\": \\"0.0.1\\",
      \\"lang\\": \\"node\\",
      \\"channel\\": \\"my-channel1\\",
      \\"directory\\": \\"./chaincodes/chaincode-kv-node\\"
    }
  ]
}"
`;

exports[`init should init simple fablo config with node chaincode and rest api 1`] = `
"{
  \\"$schema\\": \\"https://github.com/softwaremill/fablo/releases/download/0.3.0-unstable/schema.json\\",
  \\"networkSettings\\": {
    \\"fabricVersion\\": \\"2.3.2\\",
    \\"tls\\": false
  },
  \\"ordererOrgs\\": [
    {
      \\"organization\\": {
        \\"name\\": \\"Orderer\\",
        \\"domain\\": \\"orderer.com\\"
      },
      \\"orderer\\": {
        \\"groupName\\": \\"group1\\",
        \\"type\\": \\"solo\\",
        \\"instances\\": 1
      }
    }
  ],
  \\"orgs\\": [
    {
      \\"organization\\": {
        \\"name\\": \\"Org1\\",
        \\"domain\\": \\"org1.com\\"
      },
      \\"peer\\": {
        \\"instances\\": 2,
        \\"db\\": \\"LevelDb\\"
      },
      \\"tools\\": {
        \\"fabloRest\\": true
      }
    }
  ],
  \\"channels\\": [
    {
      \\"name\\": \\"my-channel1\\",
      \\"orgs\\": [
        {
          \\"name\\": \\"Org1\\",
          \\"peers\\": [
            \\"peer0\\",
            \\"peer1\\"
          ]
        }
      ]
    }
  ],
  \\"chaincodes\\": [
    {
      \\"name\\": \\"chaincode1\\",
      \\"version\\": \\"0.0.1\\",
      \\"lang\\": \\"node\\",
      \\"channel\\": \\"my-channel1\\",
      \\"directory\\": \\"./chaincodes/chaincode-kv-node\\"
    }
  ]
}"
`;
